Customise jira report.
Removed duplicate configuration from commons-parent.

Jira report for modules to only include those tickets using the
component tag.

--- a/commons-rng-core/pom.xml
+++ b/commons-rng-core/pom.xml
@@ -43,6 +43,7 @@
     <commons.automatic.module.name>org.apache.commons.rng.core</commons.automatic.module.name>
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}/..</rng.parent.dir>
+    <rng.jira.component>core</rng.jira.component>
   </properties>
 
   <dependencies>
