--- a/commons-rng-sampling/pom.xml
+++ b/commons-rng-sampling/pom.xml
@@ -40,6 +40,7 @@
     <commons.automatic.module.name>org.apache.commons.rng.sampling</commons.automatic.module.name>
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}/..</rng.parent.dir>
+    <rng.jira.component>sampling</rng.jira.component>
   </properties>
 
   <dependencies>
