--- a/commons-rng-client-api/pom.xml
+++ b/commons-rng-client-api/pom.xml
@@ -40,6 +40,7 @@
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}/..</rng.parent.dir>
     <commons.release.isDistModule>false</commons.release.isDistModule>
+    <rng.jira.component>client-api</rng.jira.component>
   </properties>
 
   <profiles>
