--- a/commons-rng-simple/pom.xml
+++ b/commons-rng-simple/pom.xml
@@ -40,6 +40,7 @@
     <commons.automatic.module.name>org.apache.commons.rng.simple</commons.automatic.module.name>
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}/..</rng.parent.dir>
+    <rng.jira.component>simple</rng.jira.component>
   </properties>
 
   <dependencies>
