--- a/commons-rng-examples/examples-jmh/pom.xml
+++ b/commons-rng-examples/examples-jmh/pom.xml
@@ -69,6 +69,8 @@
     <jmh.version>1.22</jmh.version>
     <uberjar.name>examples-jmh</uberjar.name>
     <project.mainClass>org.openjdk.jmh.Main</project.mainClass>
+    <!-- Disable analysis for benchmarking code. -->
+    <pmd.skip>true</pmd.skip>
   </properties>
 
   <profiles>
