--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,9 @@ sudo: false
 
 # Required to build with openjdk7
 dist: trusty
-
+cache:
+  directories:
+    - $HOME/.m2
 jdk:
   - openjdk7
   - openjdk8
