--- a/commons-rng-examples/pom.xml
+++ b/commons-rng-examples/pom.xml
@@ -89,6 +89,14 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <configuration>
+          <failOnViolation>false</failOnViolation>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 
   <modules>
