--- a/pom.xml
+++ b/pom.xml
@@ -272,18 +272,6 @@
           </excludes>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>clirr-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>verify</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
 
       <plugin>
         <!-- NOTE: javadoc config must also be set under <reporting> -->
@@ -668,6 +656,30 @@ Running "svn up" will download *all* the files of the live web site at
           </plugin>
         </plugins>
       </reporting>
+    </profile>
+    <profile>
+      <id>clirr-check</id>
+      <activation>
+        <file>
+          <exists>src/site/resources/profile.clirr</exists>
+        </file>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>clirr-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <phase>verify</phase>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
 
     <!--
