--- a/commons-rng-examples/examples-stress/pom.xml
+++ b/commons-rng-examples/examples-stress/pom.xml
@@ -67,8 +67,9 @@
     <plugins>
       <plugin>
         <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>${rng.checkstyle.version}</version>
         <!-- The custom ApplicationException cannot be loaded by checkstyle unless the source is
-          compiled. Checkstyle runs in the validate phase  so here we switch to verify -->
+          compiled. Checkstyle runs in the validate phase so here we switch to verify -->
         <executions>
           <execution>
             <phase>verify</phase>
@@ -89,6 +90,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-shade-plugin</artifactId>
+            <version>${rng.shade.version}</version>
             <executions>
               <execution>
                 <phase>package</phase>
