--- a/pom.xml
+++ b/pom.xml
@@ -53,12 +53,14 @@
     <commons.encoding>UTF-8</commons.encoding>
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
+    <rng.clirr.version>2.8</rng.clirr.version>
     <rng.pmd.version>3.14.0</rng.pmd.version>
     <rng.pmd.dep.version>6.37.0</rng.pmd.dep.version>
     <rng.checkstyle.version>3.1.2</rng.checkstyle.version>
     <rng.checkstyle.dep.version>8.45</rng.checkstyle.dep.version>
     <rng.mathjax.url>https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js</rng.mathjax.url>
     <rng.antrun.version>1.8</rng.antrun.version>
+    <rng.surefire.version>3.0.0-M5</rng.surefire.version>
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}</rng.parent.dir>
 
@@ -170,6 +172,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>${rng.surefire.version}</version>
         <configuration>
           <!-- Fix for OpenJDK 8 now validating class-path attributes in Jar manifests. -->
           <!-- See https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=912333#63 -->
@@ -671,6 +674,7 @@ Running "svn up" will download *all* the files of the live web site at
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>clirr-maven-plugin</artifactId>
+            <version>${rng.clirr.version}</version>
             <executions>
               <execution>
                 <phase>verify</phase>
