--- a/commons-rng-examples/examples-jpms/jpms-app/pom.xml
+++ b/commons-rng-examples/examples-jpms/jpms-app/pom.xml
@@ -26,7 +26,7 @@
 
   <artifactId>commons-rng-examples-jpms-app</artifactId>
   <version>1.4-SNAPSHOT</version>
-  <name>JPMS module example (application)</name>
+  <name>Apache Commons RNG JPMS Module Example (Application)</name>
 
   <description>Testing JPMS. Code in this module is not part of the public API.</description>
 
