--- a/commons-rng-examples/examples-jpms/pom.xml
+++ b/commons-rng-examples/examples-jpms/pom.xml
@@ -27,7 +27,7 @@
   <artifactId>commons-rng-examples-jpms</artifactId>
   <version>1.4-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>JPMS Integration test</name>
+  <name>Apache Commons RNG JPMS Integration Test</name>
 
   <description>Testing JPMS. Code in this module is not part of the public API.</description>
 
