--- a/commons-rng-examples/examples-jmh/pom.xml
+++ b/commons-rng-examples/examples-jmh/pom.xml
@@ -156,6 +156,8 @@
                         <exclude>META-INF/*.SF</exclude>
                         <exclude>META-INF/*.DSA</exclude>
                         <exclude>META-INF/*.RSA</exclude>
+                        <exclude>META-INF/LICENSE</exclude>
+                        <exclude>META-INF/THIRD-PARTY</exclude>
                         <exclude>META-INF/LICENSE.txt</exclude>
                         <exclude>META-INF/MANIFEST.MF</exclude>
                         <exclude>META-INF/NOTICE.txt</exclude>
