Exclude examples sampling pdf files from RAT check plugin

--- a/pom.xml
+++ b/pom.xml
@@ -274,6 +274,7 @@
             <exclude>src/site/resources/txt/userguide/stress/**</exclude>
             <exclude>dist-archive/**</exclude>
             <exclude>**/*.patch</exclude>
+            <exclude>**/pdf.*.txt</exclude>
           </excludes>
         </configuration>
       </plugin>
