Correct the help comment

--- a/docs-archive/pom.xml
+++ b/docs-archive/pom.xml
@@ -151,7 +151,7 @@
       </plugin>
       <!-- Create an aggregate report from the *parent* directory using:
 
-           'mvn jacoco:report-aggregate'
+           mvn jacoco:report-aggregate -P docs
 
            Requires that tests have already been run with the jacoco user agent.
            If executed within this directory then jacoco does not collect the
