--- a/docs-archive/pom.xml
+++ b/docs-archive/pom.xml
@@ -72,43 +72,43 @@
     <sourceDirectory>src</sourceDirectory>
 
     <plugins>
-      <!-- Create aggregate javadoc directory using 'mvn package' -->
+      <!-- Create aggregate javadoc jar using 'mvn package' -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <reportOutputDirectory>${project.build.directory}/apidocs</reportOutputDirectory>
+          <includeDependencySources>true</includeDependencySources>
+          <doctitle>Apache Commons RNG ${project.version}</doctitle>
+          <windowtitle>Apache Commons RNG ${project.version}</windowtitle>
+          <use>true</use>
+          <version>false</version>
+          <groups>
+            <group>
+              <title>API Package</title>
+              <packages>org.apache.commons.rng</packages>
+            </group>
+            <group>
+              <title>Core Package</title>
+              <packages>org.apache.commons.rng.core*</packages>
+            </group>
+            <group>
+              <title>Simple Package</title>
+              <packages>org.apache.commons.rng.simple*</packages>
+            </group>
+            <group>
+              <title>Sampling Package</title>
+              <packages>org.apache.commons.rng.sampling*</packages>
+            </group>
+          </groups>
+        </configuration>
         <executions>
           <execution>
             <id>attach-javadocs</id>
             <phase>prepare-package</phase>
             <goals>
-              <goal>jar</goal>
+              <goal>aggregate-jar</goal>
             </goals>
-            <configuration>
-              <reportOutputDirectory>${project.build.directory}/apidocs</reportOutputDirectory>
-              <includeDependencySources>true</includeDependencySources>
-              <doctitle>Apache Commons RNG ${project.version}</doctitle>
-              <windowtitle>Apache Commons RNG ${project.version}</windowtitle>
-              <use>true</use>
-              <version>false</version>
-              <groups>
-                <group>
-                  <title>API Package</title>
-                  <packages>org.apache.commons.rng</packages>
-                </group>
-                <group>
-                  <title>Core Package</title>
-                  <packages>org.apache.commons.rng.core*</packages>
-                </group>
-                <group>
-                  <title>Simple Package</title>
-                  <packages>org.apache.commons.rng.simple*</packages>
-                </group>
-                <group>
-                  <title>Sampling Package</title>
-                  <packages>org.apache.commons.rng.sampling*</packages>
-                </group>
-              </groups>
-            </configuration>
           </execution>
         </executions>
       </plugin>
@@ -134,6 +134,45 @@
 
   <reporting>
     <plugins>
+      <!-- Create aggregate javadoc site report -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <reportOutputDirectory>${project.build.directory}/apidocs</reportOutputDirectory>
+          <includeDependencySources>true</includeDependencySources>
+          <doctitle>Apache Commons RNG ${project.version}</doctitle>
+          <windowtitle>Apache Commons RNG ${project.version}</windowtitle>
+          <use>true</use>
+          <version>false</version>
+          <groups>
+            <group>
+              <title>API Package</title>
+              <packages>org.apache.commons.rng</packages>
+            </group>
+            <group>
+              <title>Core Package</title>
+              <packages>org.apache.commons.rng.core*</packages>
+            </group>
+            <group>
+              <title>Simple Package</title>
+              <packages>org.apache.commons.rng.simple*</packages>
+            </group>
+            <group>
+              <title>Sampling Package</title>
+              <packages>org.apache.commons.rng.sampling*</packages>
+            </group>
+          </groups>
+        </configuration>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>aggregate</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
+
       <plugin>
         <artifactId>maven-pmd-plugin</artifactId>
         <version>${rng.pmd.version}</version>
@@ -149,6 +188,7 @@
           <skip>true</skip>
         </configuration>
       </plugin>
+
       <!-- Create an aggregate report from the *parent* directory using:
 
            mvn jacoco:report-aggregate -P docs
