--- a/commons-rng-examples/examples-jmh/pom.xml
+++ b/commons-rng-examples/examples-jmh/pom.xml
@@ -158,9 +158,9 @@
                         <exclude>META-INF/*.RSA</exclude>
                         <exclude>LICENSE</exclude>
                         <exclude>THIRD-PARTY</exclude>
-                        <exclude>META-INF/LICENSE.txt</exclude>
+                        <exclude>META-INF/LICENSE</exclude>
                         <exclude>META-INF/MANIFEST.MF</exclude>
-                        <exclude>META-INF/NOTICE.txt</exclude>
+                        <exclude>META-INF/NOTICE</exclude>
                       </excludes>
                     </filter>
                   </filters>
