--- a/dist-archive/pom.xml
+++ b/dist-archive/pom.xml
@@ -23,11 +23,11 @@ under the License.
   <parent>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-rng-parent</artifactId>
-    <version>1.4-SNAPSHOT</version>
+    <version>1.4</version>
   </parent>
 
   <artifactId>commons-rng</artifactId>
-  <version>1.4-SNAPSHOT</version>
+  <version>1.4</version>
   <packaging>pom</packaging>
   <name>Apache Commons RNG (full distribution)</name>
   <description>This module creates the Apache Commons RNG distribution.</description>
@@ -67,18 +67,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.4-SNAPSHOT</version>
+          <version>1.4</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.4-SNAPSHOT</version>
+          <version>1.4</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.4-SNAPSHOT</version>
+          <version>1.4</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -86,18 +86,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.4-SNAPSHOT</version>
+          <version>1.4</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.4-SNAPSHOT</version>
+          <version>1.4</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.4-SNAPSHOT</version>
+          <version>1.4</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -105,18 +105,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.4-SNAPSHOT</version>
+          <version>1.4</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.4-SNAPSHOT</version>
+          <version>1.4</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.4-SNAPSHOT</version>
+          <version>1.4</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -124,18 +124,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.4-SNAPSHOT</version>
+          <version>1.4</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.4-SNAPSHOT</version>
+          <version>1.4</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.4-SNAPSHOT</version>
+          <version>1.4</version>
           <classifier>javadoc</classifier>
         </dependency>
 
